Blog template: Fix main logo size on mobile

--- a/templates/blog/styles.css
+++ b/templates/blog/styles.css
@@ -136,8 +136,8 @@ body .demo-blog {
   border-top-right-radius: 2px;
 }
 .demo-blog .something-else .mdl-card__media img {
-  width: 33%;
-  height: 33;
+  width: 64px;
+  height: 64px;
   margin-bottom: 10px;
 }
 .demo-blog .something-else .mdl-card__supporting-text {
